<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_forget_pass" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/text_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/forget_password_dialog"
            android:textSize="@dimen/page_inner_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_emailad"
            android:layout_alignRight="@+id/edit_emailad"
            android:layout_below="@+id/text_forget"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/request_pass"
            android:textSize="@dimen/page_inner_text" />

        <EditText
            android:id="@+id/edit_emailad"
            style="@style/edittext_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_enter"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_email_address" />

        <LinearLayout
            android:id="@+id/rel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_emailad"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/btn_cancel"
                style="@style/green_btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:background="@color/actionBar"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textSize="@dimen/buttom_text_size" />

            <TextView
                android:id="@+id/btn_request"
                style="@style/green_btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/actionBar"
                android:padding="5dp"
                android:text="@string/request"
                android:textSize="@dimen/buttom_text_size" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>