<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true" >

    <ScrollView
        android:id="@+id/srcl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/logoCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:src="@drawable/car_login" />

            <EditText
                android:id="@+id/login_username"
                style="@style/edittext_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logoCar"
                android:layout_centerHorizontal="true"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/login_password"
                style="@style/edittext_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/edit_text_margin_top"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_login"
                style="@style/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_password"
                android:layout_alignRight="@+id/login_password"
                android:layout_below="@+id/login_password"
                android:layout_marginTop="10dp"
                android:text="@string/login_upercase" />

            <TextView
                android:id="@+id/login_forgotpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_login"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/grey"
                android:textSize="@dimen/page_inner_text" />

            <RelativeLayout
                android:id="@+id/or_rel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_forgotpass" >

                <TextView
                    android:id="@+id/text_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:text="or"
                    android:textColor="@color/sign_up_line"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/text_or"
                    android:background="@color/sign_up_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/text_or"
                    android:background="@color/sign_up_line" />
            </RelativeLayout>


            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/so"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:text="@string/newUser"
                android:textColor="@color/grey"
                android:textSize="@dimen/page_inner_text" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>